fix whitespacing issue and add square image

--- a/themes/static/themes/leftistForeignPolicy/css/leftist_foreign_policy_layout.scss
+++ b/themes/static/themes/leftistForeignPolicy/css/leftist_foreign_policy_layout.scss
@@ -5,7 +5,6 @@
   position: relative;
 
   	.feature-right, .feature-left{
-
   		float: left;
   		width: 50%;
   	}
@@ -33,7 +32,7 @@
  		}
  		h1{
  			font-family: $serif;
- 			font-size: 45px;
+ 			font-size: 35px;
  			line-height: 120%;
  			text-transform: uppercase;
  			width: 60%;
@@ -89,6 +88,8 @@ article .block-PullQuote {
 
 	.table-of-contents{
 		width: 25%;
+		padding-bottom: 0px;
+		border-bottom: none;
 
 		h2{
 			margin-top: 0px;
@@ -122,11 +123,9 @@ article .block-PullQuote {
 	.narrow-content{
 		margin: 0px;
 	}
-
 	.template-article-page .leftist-feature{
 		margin-top: -70px;
 		.feature-text{
-
 			.title{
 				margin-top: 10%;
 				width: 80%;
@@ -148,11 +147,24 @@ article .block-PullQuote {
 
 	.story{
 		.table-of-contents{
-			padding: 15px;
+	
+			margin: 15px;
 			width: auto;
+			padding-bottom: 15px;
+			border-bottom: solid 1px #000;
 		}
 	}
 
+}
+
+@media(max-width: 480px){
+	.template-article-page .leftist-feature{
+		.feature-text{
+			h1{
+				font-size: 16px;
+			}
+		}
+	}
 }
 
 
